--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,54 @@
+# influx-db commands
+#influx query 'from(bucket:"my-bucket") |> range(start:-1m)'
+#influx query 'from(bucket:"my-bucket") |> range(start:-1d) |> count()'
 version: '2.4'
 services:
   iot-data-viewer-ui:
     image: iot-data-viewer-ui:0.0.1
     ports: 
       - 3000:80
+    mem_limit: 100mb
     
   iot-data-viewer-backend:
     image: iot-data-viewer-backend:0.0.1
     ports: 
       - 3001:3001
-    
+    mem_limit: 100mb
 
+  influxdb:
+    image: influxdb:2.1.1-alpine
+    ports:
+      - 8086:8086
+    volumes:
+      #- influxdb-storage:/var/lib/influxdb
+      #- ./data:/root/.influxdbv2
+      - ./data:/var/lib/influxdb2
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=admin
+      - DOCKER_INFLUXDB_INIT_PASSWORD=adminpass
+      - DOCKER_INFLUXDB_INIT_ORG=my-org
+      - DOCKER_INFLUXDB_INIT_BUCKET=my-bucket
+      - DOCKER_INFLUXDB_INIT_RETENTION=1w
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=my-super-secret-auth-token
+    mem_limit: 100mb
+
+  eclipse-mosquitto:
+    container_name: eclipse-mosquitto
+    image: 'eclipse-mosquitto:latest'
+    ports:
+      - '1883:1883'
+    restart: always
+
+  node-red:
+    container_name: node-red
+    image: nodered/node-red:latest
+    ports:
+      - "1880:1880"
+    restart: always
+    volumes:
+      - node-red-data:/data
+
+volumes:
+  node-red-data:
+  influxdb-storage:
